--- a/index.html
+++ b/index.html
@@ -1710,7 +1710,7 @@
           </h1>
         </div>
         <div class="hero-image fade-in-up delay-5">
-          <img src="img/sd.png" alt="Profile Image" />
+          <img src="./sd.png" alt="Profile Image" />
         </div>
         <div class="typing-text fade-in-up delay-1">
           <span id="typed-text"></span><span class="cursor">|</span>
@@ -2763,3 +2763,4 @@
     </script>
   </body>
 </html>
+
